syntax = "proto3";

package membership;

message Empty {}
message JoinResponse {
  string message = 1;
  repeated string addresses = 2;
}
message AddNodeRequest { string ip = 1; }
message AddNodeResponse { string message = 1; }

message RemoveNodeResponse { string message = 1; }

service ClusterManagement {
  rpc join(Empty) returns (JoinResponse);
  rpc add(AddNodeRequest) returns (AddNodeResponse);
  rpc remove(Empty) returns (RemoveNodeResponse);
}
